--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="mars-container">
                         <div class=" heading-m">
                             <p>FROM ORANGE DATA TO EVERYTHING</p>
-                            <h1>WE STAY AHEAD</h1>
+                            <h1>WE STAY AHEAD AHEAD</h1>
                         </div>
                         <div class="intro-space">
                         </div>
