--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
-        gtag(‘js’, new Date());
-        gtag(‘config’, ‘UA-175043715-1’);
+        gtag('js', new Date());
+        gtag('config', 'UA-175043715-1');
         </script>
     </head>
     <body>
@@ -177,7 +177,7 @@
                                         <div class="values">
                                             <img src="images/Core Values_3.png"/>
                                         </div>
-                                        <h6>PEOPLE</h6>
+                                        <h6>EXPERIENCE</h6>
                                     </div>
                                     <div class="col-6 col-md-3">
                                         <div class="values">
